--- a/index.html
+++ b/index.html
@@ -231,19 +231,23 @@
                 <a href="">INFO</a>
             </div>
         </section>
-        <section id="cnt5">
-            <div>
-                <h2>DESIGN<br>WORK</h2>
-                <span class="h2">DESIGN<br>WORK</span>
+        <section id="cnt5" class="clearfix">
+            <div class="cnt5_h head">
+                <img src="assets/image/index/05head.svg" alt="...">
+                <h2>TWOSOME</h2>
             </div>
-            <video poster="assets/image/movie/mv_two.jpg" controls>
-                <source src="assets/image/movie/movie_twosome.mp4" type="video/mp4">
-                지원되지 않는 브라우저입니다. <a href="">해당 링크</a>를 통해 영상을 시청해주세요.
-            </video>
-            <div class="cnt4_txt">
-                <strong>2019.12.19~2020.01.08</strong>
-                <p>3주간 진행한 개인 작업물입니다. 작업 시기와 관계 <br>없이 (크리스마스, 신년, 발렌타인 등) 언제든 사용할 수 <br>있는 디자인을 중점으로 두었으며, 자세한 사항은 <br>링크를 확인해주세요.</p>
-                <a href="">INFO</a>
+            <div class="cnt5_wrap">
+                <div class="cnt5_vd">
+                    <video poster="assets/image/movie/mv_two.jpg" controls>
+                        <source src="assets/image/movie/movie_twosome.mp4" type="video/mp4">
+                        지원되지 않는 브라우저입니다. <a href="">해당 링크</a>를 통해 영상을 시청해주세요.
+                    </video>
+                </div>
+                <div class="cnt5_txt">
+                    <strong>2019.12.19~2020.01.08</strong>
+                    <p>3주간 진행한 개인 작업물입니다. 작업 시기와 관계 없이 (크리스마스, 신년, 발렌타인 등) 언제든 사용할 수 있는 디자인을 중점으로 두었으며, 자세한 사항은 링크를 확인해주세요.</p>
+                    <a href="info/twosome.html">INFO</a>
+                </div>
             </div>
         </section>
     </div>
