cnt1 스크립트+원페이지 스크롤링 추가

--- a/index.html
+++ b/index.html
@@ -9,13 +9,21 @@
         <script src="assets/html5shiv.min.js"></script>
     <![endif]-->
     <script src="assets/js/jquery-1.12.4.min.js"></script>
+    <script src="assets/js/jquery.easing.min.js"></script>
     <script src="assets/js/common.js"></script>
-    <!-- <script src="assets/js/idx.js"></script> -->
+    <script src="assets/js/idx.js"></script>
+    <script>
+        $(document).ready(function() {
+            setInterval(function () {
+                $('.svgbox .hiddenbox').css({width: '100%', height: '100%'}).stop().animate({width: 0, height: 0}, 1500);
+            }, 3000);
+        });
+    </script>
 </head>
 
 <body>
     <h1 id="logo">
-        <a href="#"><img src="assets/image/common/logo_white.png" alt="포폴 로고"></a>
+        <a href="#"><img src="assets/image/common/logo_white.png" alt="로고"></a>
     </h1>
     <nav id="indicator">
         <ul>
@@ -78,42 +86,46 @@
                 <strong>My Portfolio</strong>
                 <p>신입 웹디자이너 구혜진의 포트폴리오 사이트입니다.</p>
             </div>
-            <svg version="1.1" id="star" xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 641 393"
-                style="enable-background:new 0 0 641 393;" xml:space="preserve">
-                <g>
+            <div class="svgbox">
+                <svg version="1.1" id="star" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                    x="0px" y="0px" viewBox="0 0 641 393" style="enable-background:new 0 0 641 393;" xml:space="preserve">
                     <g>
-                        <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="113.6845" y1="103.1996"
-                            x2="537.1021" y2="240.7764" gradientTransform="matrix(1 0 0 -1 0 394)">
-                            <stop offset="0" style="stop-color:#FFFFFF;stop-opacity:0" />
-                            <stop offset="1" style="stop-color:#FFFFFF" />
-                        </linearGradient>
-                        <path class="shooting_star" d="M587.8,343.5c0-3.5-0.3-7.2-0.6-10.8c-0.3-3.6-0.8-7.2-1.3-10.8c-1.1-7.2-2.5-14.3-4.2-21.4
-                        c-3.4-14.1-7.9-28-13.2-41.5s-11.5-26.7-18.6-39.4s-15-24.9-23.7-36.6l-6.6-8.6l-7-8.3c-2.3-2.8-4.8-5.4-7.3-8.1
-                        c-2.5-2.7-4.9-5.4-7.5-7.9l-7.8-7.6c-2.7-2.5-5.4-4.8-8.1-7.3l-4.1-3.6l-4.3-3.4l-8.5-6.8c-23.3-17.5-48.7-32-75.5-43.4
-                        c-1.6-0.8-3.3-1.4-5-2.1l-5.1-2c-3.4-1.3-6.8-2.7-10.2-3.9l-10.4-3.4c-3.5-1.1-6.9-2.3-10.4-3.2l-10.5-2.9l-2.6-0.7
-                        c-0.9-0.2-1.8-0.4-2.7-0.6l-5.3-1.2l-5.3-1.2c-1.8-0.4-3.5-0.8-5.3-1.1l-10.8-1.8c-3.6-0.7-7.2-1-10.8-1.4l-5.4-0.6
-                        c-1.8-0.2-3.6-0.4-5.4-0.5L273,50.6l-2.7-0.2h-2.7l-5.5-0.1c-7.3-0.2-14.6,0.3-21.8,0.5l-10.9,0.9l-2.7,0.2
-                        c-0.9,0.1-1.8,0.2-2.7,0.3l-5.4,0.7c-14.4,2-28.7,4.9-42.7,9c-14,4-27.7,9-41,14.9s-26.2,12.7-38.6,20.4
-                        c-6.2,3.8-12.2,7.9-18.1,12.2c-5.9,4.3-11.6,8.8-17,13.7c5.4-4.9,11.1-9.4,17-13.7c5.9-4.3,11.9-8.4,18.1-12.2
-                        c12.3-7.7,25.3-14.5,38.6-20.5c13.3-5.9,27-11,41-15c14-4.1,28.3-7,42.7-9L224,52c0.9-0.1,1.8-0.3,2.7-0.4l2.7-0.2l10.9-1
-                        c7.3-0.3,14.6-0.8,21.8-0.5h5.5h2.7l2.7,0.2l10.9,0.6c1.8,0.1,3.6,0.3,5.4,0.5l5.4,0.6c3.6,0.4,7.3,0.7,10.8,1.4l10.8,1.8
-                        c1.8,0.3,3.6,0.7,5.4,1.1l5.3,1.2l5.3,1.2c0.9,0.2,1.8,0.4,2.7,0.6l2.6,0.7l10.5,2.9c3.5,0.9,7,2.1,10.4,3.2l10.4,3.4
-                        c3.4,1.3,6.8,2.6,10.2,3.9l5.1,2c1.7,0.7,3.4,1.3,5.1,2.1c26.8,11.4,52.4,25.9,75.7,43.4l8.5,6.8l4.3,3.4l4.1,3.6
-                        c2.7,2.4,5.5,4.8,8.2,7.3l7.8,7.6c2.7,2.5,5.1,5.2,7.6,7.9s5,5.3,7.3,8.1l7.1,8.4l6.7,8.7c8.7,11.7,16.7,23.9,23.9,36.6
-                        c7.1,12.7,13.3,26,18.7,39.5c5.4,13.6,9.9,27.5,13.5,41.6l1.4,5.3l1.2,5.3c0.4,1.8,0.8,3.6,1.2,5.3c0.4,1.8,0.8,3.6,1.1,5.4
-                        c1.4,7.2,2.7,14.3,3.6,21.7c0.1,1-0.6,1.9-1.6,2s-1.9-0.6-2-1.6C587.8,343.7,587.8,343.7,587.8,343.5L587.8,343.5z" />
+                        <g>
+                            <linearGradient id="SVGID_1_" gradientUnits="userSpaceOnUse" x1="113.6845" y1="103.1996" x2="537.1021"
+                                y2="240.7764" gradientTransform="matrix(1 0 0 -1 0 394)">
+                                <stop offset="0" style="stop-color:#FFFFFF;stop-opacity:0" />
+                                <stop offset="1" style="stop-color:#FFFFFF" />
+                            </linearGradient>
+                            <path class="starpath"
+                                d="M587.8,343.5c0-3.5-0.3-7.2-0.6-10.8c-0.3-3.6-0.8-7.2-1.3-10.8c-1.1-7.2-2.5-14.3-4.2-21.4
+                                    c-3.4-14.1-7.9-28-13.2-41.5s-11.5-26.7-18.6-39.4s-15-24.9-23.7-36.6l-6.6-8.6l-7-8.3c-2.3-2.8-4.8-5.4-7.3-8.1
+                                    c-2.5-2.7-4.9-5.4-7.5-7.9l-7.8-7.6c-2.7-2.5-5.4-4.8-8.1-7.3l-4.1-3.6l-4.3-3.4l-8.5-6.8c-23.3-17.5-48.7-32-75.5-43.4
+                                    c-1.6-0.8-3.3-1.4-5-2.1l-5.1-2c-3.4-1.3-6.8-2.7-10.2-3.9l-10.4-3.4c-3.5-1.1-6.9-2.3-10.4-3.2l-10.5-2.9l-2.6-0.7
+                                    c-0.9-0.2-1.8-0.4-2.7-0.6l-5.3-1.2l-5.3-1.2c-1.8-0.4-3.5-0.8-5.3-1.1l-10.8-1.8c-3.6-0.7-7.2-1-10.8-1.4l-5.4-0.6
+                                    c-1.8-0.2-3.6-0.4-5.4-0.5L273,50.6l-2.7-0.2h-2.7l-5.5-0.1c-7.3-0.2-14.6,0.3-21.8,0.5l-10.9,0.9l-2.7,0.2
+                                    c-0.9,0.1-1.8,0.2-2.7,0.3l-5.4,0.7c-14.4,2-28.7,4.9-42.7,9c-14,4-27.7,9-41,14.9s-26.2,12.7-38.6,20.4
+                                    c-6.2,3.8-12.2,7.9-18.1,12.2c-5.9,4.3-11.6,8.8-17,13.7c5.4-4.9,11.1-9.4,17-13.7c5.9-4.3,11.9-8.4,18.1-12.2
+                                    c12.3-7.7,25.3-14.5,38.6-20.5c13.3-5.9,27-11,41-15c14-4.1,28.3-7,42.7-9L224,52c0.9-0.1,1.8-0.3,2.7-0.4l2.7-0.2l10.9-1
+                                    c7.3-0.3,14.6-0.8,21.8-0.5h5.5h2.7l2.7,0.2l10.9,0.6c1.8,0.1,3.6,0.3,5.4,0.5l5.4,0.6c3.6,0.4,7.3,0.7,10.8,1.4l10.8,1.8
+                                    c1.8,0.3,3.6,0.7,5.4,1.1l5.3,1.2l5.3,1.2c0.9,0.2,1.8,0.4,2.7,0.6l2.6,0.7l10.5,2.9c3.5,0.9,7,2.1,10.4,3.2l10.4,3.4
+                                    c3.4,1.3,6.8,2.6,10.2,3.9l5.1,2c1.7,0.7,3.4,1.3,5.1,2.1c26.8,11.4,52.4,25.9,75.7,43.4l8.5,6.8l4.3,3.4l4.1,3.6
+                                    c2.7,2.4,5.5,4.8,8.2,7.3l7.8,7.6c2.7,2.5,5.1,5.2,7.6,7.9s5,5.3,7.3,8.1l7.1,8.4l6.7,8.7c8.7,11.7,16.7,23.9,23.9,36.6
+                                    c7.1,12.7,13.3,26,18.7,39.5c5.4,13.6,9.9,27.5,13.5,41.6l1.4,5.3l1.2,5.3c0.4,1.8,0.8,3.6,1.2,5.3c0.4,1.8,0.8,3.6,1.1,5.4
+                                    c1.4,7.2,2.7,14.3,3.6,21.7c0.1,1-0.6,1.9-1.6,2s-1.9-0.6-2-1.6C587.8,343.7,587.8,343.7,587.8,343.5L587.8,343.5z" />
+                        </g>
                     </g>
-                </g>
-            </svg>
+                </svg>
+                <div class="hiddenbox"></div>
+            </div>
             <div class="mouse">
                 <p>Scroll</p>
                 <img src="assets/image/icon/scroll.svg" alt="...">
             </div>
             <div class="overlay">
+                <img class="parti" src="assets/image/index/01particle.svg" alt="...">
                 <img class="dia1" src="assets/image/index/01bg_diamond1.svg" alt="...">
-                <img class="dia2" src="assets/image/index/01bg_diamond2.svg" alt="...">
                 <img class="rou" src="assets/image/index/01bg_round.svg" alt="...">
+                <img class="dia2" src="assets/image/index/01bg_diamond2.svg" alt="...">
                 <img class="squa" src="assets/image/index/01bg_square.svg" alt="...">
             </div>
         </section>
@@ -217,7 +229,7 @@
         <section id="cnt4">
             <div class="cnt4_h head">
                 <img src="assets/image/index/04head.svg" alt="...">
-                <h2>CHAMELLEON</h2>
+                <h2>CHAMELEON</h2>
             </div>
             <div class="cnt4_vd">
                 <video poster="assets/image/movie/mv_cha.jpg" controls>
@@ -228,7 +240,7 @@
             <div class="cnt4_txt">
                 <strong>2019.11.11~2019.12.13</strong>
                 <p>한 달 가량 진행한 팀 프로젝트입니다. 타 영화관 사이트의 불편함을 해소하고, <br>디자인적 접근성과 이용성을 높이려 했습니다. 자세한 사항은 링크를 확인해주세요.</p>
-                <a href="">INFO</a>
+                <a href="info/chameleon.html">INFO</a>
             </div>
         </section>
         <section id="cnt5" class="clearfix">
