--- a/info/twosome.html
+++ b/info/twosome.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 id="logo">
-        <a href="#"><img src="../assets/image/common/logo_blue.png" alt="포폴 로고"></a>
+        <a href="../index.html"><img src="../assets/image/common/logo_white.png" alt="로고"></a>
     </h1>
     <section id="ts_ifhd" class="info_head">
         <ul class="inhead1 clearfix">
@@ -29,7 +29,7 @@
             </li>
             <li>
                 <strong>사용 프로그램</strong>
-                <p>HTML5, CSS3, SASS, JQuery, Adobe Photoshop/Illustator</p>
+                <p>HTML5, CSS3, SASS, JQuery, Photoshop, Illustator</p>
             </li>
             <li>
                 <strong>주소</strong>
@@ -40,11 +40,12 @@
     <section id="ts_ifbd" class="info_body">
         <article class="view">
             <h3>View</h3>
-            <ul class="twosome clearfix">
-                <li><img src="../assets/image/twosome/view1.jpg" alt=""></li>
-                <li><img src="../assets/image/twosome/view2.jpg" alt=""></li>
-                <li><img src="../assets/image/twosome/view3.jpg" alt=""></li>
+            <ul class="clearfix">
+                <li><img src="../assets/image/twosome/view1.jpg" alt="인덱스 화면 상단 부분"></li>
+                <li><img src="../assets/image/twosome/view2.jpg" alt="네비게이션 바"></li>
+                <li><img src="../assets/image/twosome/view3.jpg" alt="상품 상세 페이지"></li>
             </ul>
+            <p>작업한 페이지의 일부분입니다.</p>
         </article>
         <article class="color">
             <h3>Color</h3>
@@ -54,11 +55,12 @@
                 </li>
                 <li>
                     <span>Sub</span>
-                </li>
+                </liclass=">
                 <li>
                     <span>Etc</span>
                 </li>
             </ul>
+            <p>위와 같은 색상을 사용하여 페이지를 구성했습니다. 메인 컬러의 경우 투썸의 원래 퍼스널 컬러이고, 금색의 경우 강조와 포인트를 위해 임의로 제가 추가하였습니다.</p>
         </article>
         <article>
             <h3>Accessibility</h3>
