--- a/info/twosome.html
+++ b/info/twosome.html
@@ -45,7 +45,8 @@
                 <li><img src="../assets/image/twosome/view2.jpg" alt="네비게이션 바"></li>
                 <li><img src="../assets/image/twosome/view3.jpg" alt="상품 상세 페이지"></li>
             </ul>
-            <p>작업한 페이지의 일부분입니다.</p>
+            <p>작업한 페이지의 일부분입니다.<br>
+            메인페이지, 메뉴 - 홀케이크, 상세 - 리얼 생크림 2호, 총 세 페이지를 작업하였습니다.</p>
         </article>
         <article class="color">
             <h3>Color</h3>
@@ -55,12 +56,18 @@
                 </li>
                 <li>
                     <span>Sub</span>
-                </liclass=">
-                <li>
-                    <span>Etc</span>
                 </li>
             </ul>
-            <p>위와 같은 색상을 사용하여 페이지를 구성했습니다. 메인 컬러의 경우 투썸의 원래 퍼스널 컬러이고, 금색의 경우 강조와 포인트를 위해 임의로 제가 추가하였습니다.</p>
+            <div>
+                <p>위와 같은 색상을 사용하여 페이지를 구성했습니다.</p> 
+                <span>메인 컬러의 경우 원래 퍼스널 색상인</span>
+                <span class="ts_color_m">#CA1A37</span><span>을 사용하였고,</span><br>
+                <span>서브 컬러인</span>
+                <span class="ts_color_s">#D58D3F</span><span>의 경우 강조를 위해 제가 임의로 추가하였습니다.</span>
+            </div>
+        </article>
+        <article class="work">
+            <h3>Work</h3>
         </article>
         <article>
             <h3>Accessibility</h3>
