--- a/info/chameleon.html
+++ b/info/chameleon.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="utf-8">
     <title> 프로젝트2 : 포트폴리오 </title>
@@ -9,6 +10,7 @@
     <![endif]-->
     <script src="../assets/js/jquery-1.12.4.min.js"></script>
 </head>
+
 <body>
     <h1 id="logo">
         <a href="../index.html"><img src="../assets/image/common/logo_white.png" alt="로고"></a>
@@ -19,7 +21,8 @@
                 <h2>카멜레온</h2>
             </li>
             <li>
-                <p>타 영화관 사이트의 불편함을 해소하기 위해 시작한 프로젝트입니다. 저를 포함해 3명의 조원이 작업했습니다. 페이지의 경우 인덱스의 레이아웃과 박스오피스/최신개봉작, 영화 - 최신개봉작, 회원가입을 작업했으며, 공동으로 작업한 인덱스의 경우 본문을 참고해주세요.</p>
+                <p>타 영화관 사이트의 불편함을 해소하기 위해 시작한 프로젝트입니다. 저를 포함해 3명의 조원이 작업했습니다. 정확히 어떤 부분을 담당했는지는 본문의
+                    &lsquo;Work&rsquo;란을 확인해주세요. 또한 코딩은 퍼블리셔/디자이너 구분 없이 함께 이뤄졌습니다.</p>
             </li>
         </ul>
         <ul class="inhead2 clearfix">
@@ -37,19 +40,59 @@
             </li>
             <li>
                 <strong>주소</strong>
-                <a href="https://chichiken.github.io/CHAMELEON/index.html">https://chichiken.github.io/CHAMELEON/index.html</a>
+                <a
+                    href="https://chichiken.github.io/CHAMELEON/index.html">https://chichiken.github.io/CHAMELEON/index.html</a>
             </li>
         </ul>
     </section>
     <section id="cm_ifbd" class="info_body">
         <article class="view">
             <h3>View</h3>
-            <ul class="clearfix">
-                <li><img src="../assets/image/twosome/view1.jpg" alt="인덱스 화면 상단 부분"></li>
-                <li><img src="../assets/image/twosome/view2.jpg" alt="네비게이션 바"></li>
-                <li><img src="../assets/image/twosome/view3.jpg" alt="상품 상세 페이지"></li>
-            </ul>
-            <p>작업한 페이지의 일부분입니다.</p>
+            <div id="cmSlider" class="slider">
+                <div class="control">
+                    <div class="prev_next p_r">
+                        <button class="prev" type="button" aria-label="이전 슬라이드" aria-controls="cmSdVs">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 65 83"
+                                style="enable-background:new 0 0 65 83;" xml:space="preserve">
+                                <polygon points="50.1,9.2 41.6,0.7 0.6,41.7 41.6,82.7 50.1,74.2 17.6,41.7 " />
+                                <g>
+                                    <path
+                                        d="M51,36.5l5.2,5.2L51,46.9l-5.2-5.2L51,36.5 M51,28L37.4,41.7L51,55.3l13.7-13.7L51,28L51,28z" />
+                                </g>
+                            </svg>
+                        </button>
+                        <button class="next" type="button" aria-label="다음 슬라이드" aria-controls="cmSdVs">
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 65 83"
+                                style="enable-background:new 0 0 65 83;" xml:space="preserve">
+                                <polygon points="14.9,9.2 23.4,0.7 64.4,41.7 23.4,82.7 14.9,74.2 47.4,41.7 " />
+                                <g>
+                                    <path
+                                        d="M14,36.5l5.2,5.2L14,46.9l-5.2-5.2L14,36.5 M14,28L0.3,41.7L14,55.3l13.7-13.7L14,28L14,28z" />
+                                </g>
+                            </svg>
+                        </button>
+                    </div>
+                    <ul class="slide_indic">
+                        <li><button type="button" aria-controls="item1"></button></li>
+                        <li><button type="button" aria-controls="item2"></button></li>
+                        <li><button type="button" aria-controls="item3"></button></li>
+                    </ul>
+                </div>
+            </div>
+            <div id="cmSdVs" class="visual clearfix">
+                <div id="item1" class="item1" role="group" aria-roledescription="slide" aria-label="3개의 슬라이드 중 1">
+                    <img src="../assets/image/chameleon/view1.jpg" alt="인덱스 화면 상단 부분">
+                </div>
+                <div id="item2" class="item2" role="group" aria-roledescription="slide" aria-label="3개의 슬라이드 중 2">
+                    <img src="../assets/image/chameleon/view1.jpg" alt="네비게이션 바">
+                </div>
+                <div id="item3" class="item3" role="group" aria-roledescription="slide" aria-label="3개의 슬라이드 중 3">
+                    <img src="../assets/image/chameleon/view1.jpg" alt="상품 상세 페이지">
+                </div>
+            </div>
+            <p>작업물의 실제 적용 중 일부입니다.</p>
         </article>
         <article class="color">
             <h3>Color</h3>
@@ -58,17 +101,70 @@
                     <span>Main</span>
                 </li>
                 <li>
-                    <span>Sub</span>
-                </liclass=">
-                <li>
-                    <span>Etc</span>
+                    <span>Logo</span>
                 </li>
             </ul>
-            <p>위와 같은 색상을 사용하여 페이지를 구성했습니다. 메인 컬러의 경우 투썸의 원래 퍼스널 컬러이고, 금색의 경우 강조와 포인트를 위해 임의로 제가 추가하였습니다.</p>
+            <div>
+                <span>카멜레온의 메인이자 포인트 컬러입니다. 색상은</span>
+                <span class="cm_color_m">#EB651E</span><span>을 사용하였습니다.</span><br>
+                <span>Logo라고 적힌 색상은 말 그대로 로고에 적용한 색으로,</span>
+                <span class="cm_color_l">#E8A64D</span><span>을 썼습니다.</span>
+            </div>
         </article>
-        <article>
+        <article class="work">
+            <!-- 
+            <p>로고 디자인과 인덱스 레이아웃, 후술할 파트의 세부 디자인과 코딩을 담당하였습니다.<br>
+            그 외에도 사이트맵에 있는 &lsquo;영화 - 최신개봉작&rsquo;, &lsquo;회원가입&rsquo; 페이지를 작업하였습니다.<br><br>
+            인덱스: 메인 슬라이더의 &lsquo;굿 라이어 배너&rsquo; 작업, 박스오피스·최신개봉작의 &lsquo;영화 파트&rsquo;, 이벤트의 &lsquo;홀수 수요일 이벤트&rsquo;와 &lsquo;나를 찾아줘&rsquo;의 배너</p>
+            -->
+            <h3>Work</h3>
+            <ul class="clearfix">
+                <li class="ml0 mt0">
+                    <img src="../assets/image/icon/cm_logo.svg" alt="">
+                    <div class="work_txt">
+                        <h4>로고</h4>
+                        <span>카멜레온의 메인 로고를 작업했습니다. <br>철자 중 &lsquo;Me&rsquo;를 스크린 모양으로 감싸 영화관 뿐이 아닌, <br>나아가 &lsquo;나 자신&rsquo;의 영화관을 강조해 디자인 했습니다. <br>무료 서체인</span>
+                        <strong>Josefin Sans</strong><span>를 사용했습니다.</span>
+                    </div>
+                </li>
+                <li class="mt0">
+                    <img src="../assets/image/chameleon/work2.jpg" alt="">
+                    <div class="work_txt">
+                        <h4>인덱스 페이지 레이아웃</h4>
+                        <p>팀의 아이디어를 모아 가장 나은 디자인을 검토하고, <br>카카오 오븐을 이용하여 간략하게 스토리보드로 정리했습니다.</p>
+                    </div>
+                </li>
+                <li class="mt0">
+                    <img src="../assets/image/chameleon/work3.jpg" alt="">
+                    <h4>메인 슬라이더 배너</h4>
+                    <p>메인 슬라이더의 배너 중 하나를 작업했습니다. <br>공식 포스터를 참고하여 간략하게 타이포를 넣고, <br>일부 글자를 강조하는 방식을 사용했습니다.</p>
+                </li>
+                <li class="ml0">
+                    <img src="../assets/image/chameleon/work4.jpg" alt="">
+                    <div class="work_txt">
+                        <h4>로고</h4>
+                        <span>카멜레온의 메인 로고를 작업했습니다. <br>철자 중 &lsquo;Me&rsquo;를 스크린 모양으로 감싸 영화관 뿐이 아닌, <br>나아가 &lsquo;나 자신&rsquo;의 영화관을 강조해 디자인 했습니다. <br>무료 서체인</span>
+                        <strong>Josefin Sans</strong><span>를 사용했습니다.</span>
+                    </div>
+                </li>
+                <li>
+                    <img src="../assets/image/chameleon/work5.jpg" alt="">
+                    <div class="work_txt">
+                        <h4>인덱스 페이지 레이아웃</h4>
+                        <p>팀의 아이디어를 모아 가장 나은 디자인을 검토하고, <br>카카오 오븐을 이용하여 간략하게 스토리보드로 정리했습니다.</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="../assets/image/chameleon/work6.svg" alt="">
+                    <h4>메인 슬라이더 배너</h4>
+                    <p>메인 슬라이더의 배너 중 하나를 작업했습니다. <br>공식 포스터를 참고하여 간략하게 타이포를 넣고, <br>일부 글자를 강조하는 방식을 사용했습니다.</p>
+                </li>
+            </ul>
+        </article>
+        <article class="access">
             <h3>Accessibility</h3>
         </article>
     </section>
 </body>
+
 </html>
